--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="/static/diagnostic icon 2.png" style="box-shadow: none; max-height:125px; width:auto; height:auto;" />
           </a>
         <p>
-        <a href="/static/ACR T-rads.jpg">
+        <a href="/static/TIRADS chart invert.jpg">
           TI-RADS Thyroid nodule classification and recommendations
         </a>
         <a href="/static/TI-RADS ACR paper.pdf" />
