--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
       </a>
     </div>
     <div id="container">
-              <div class="column left">
-          <a href="diagnostic.html">
-            <img src="/static/diagnostic icon 2.png" style="box-shadow: none; max-height:125px; width:auto; height:auto;" />
-          </a>
+        <div class="column left">
+            <img src="/static/diagnostic icon 2.png" style="box-shadow: none; max-height:100px; width:auto; height:auto;" />
+          <h1>Diagnostic</h1>
         <p>
         <a href="/static/TIRADS chart invert.jpg">
           TI-RADS Thyroid nodule classification and recommendations
