--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     </div>
     <div id="container">
         <div class="column left">
-            <img src="/static/diagnostic icon 2.png" style="box-shadow: none; max-height:80px; width:auto; height:auto;" /> <h1>Diagnostic</h1>
+          <p>
+            <img src="/static/diagnostic icon 2.png" style="box-shadow: none; max-height:80px; width:auto; height:auto;" /> 
+          Diagnostic
+          </p>
         <p>
         <a href="/static/TIRADS chart invert.jpg">
           TI-RADS Thyroid nodule classification and recommendations
