--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div id="container">
         <div class="column left">
-          <p style="font-size:35px; align-items: center; vertical-align: middle;">
+          <p style="font-size:35px; margins: 0;">
             <img src="/static/diagnostic icon 2.png" style="box-shadow: none; max-height:80px; width:auto; height:auto;" /> 
           Diagnostic
           </p>
