--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div id="container">
         <div class="column left">
-          <p style="font-size:35px; margins: 0;">
+          <p style="font-size:35px; margin: 0;">
             <img src="/static/diagnostic icon 2.png" style="box-shadow: none; max-height:80px; width:auto; height:auto;" /> 
           Diagnostic
           </p>
@@ -84,9 +84,10 @@
         </p>
       </div>
       <div class="column center">
-        <a href="interventional.html">
-          <img src="/static/Interventional menu header.png" height="150" style="box-shadow: none; max-height:150px; width:auto; height:auto" />
-        </a>
+        <p style="font-size: 35px; margin: 0;">
+          <img src="/static/Interventional icon 2.png" style="box-shadow: none; max-height:80px; width:auto; height:auto" />
+          Interventional
+        </p>
         <p>
         <a href="/static/SIR Anticoagulation guidelines.jpg">
           SIR anticoagulation guidelines for interventional procedures
