--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
       <div class="column center">
         <p style="font-size: 35px; margin: 0;">
-          <img src="/static/Interventional icon 2.png" style="box-shadow: none; max-height:80px; width:auto; height:auto" />
+          <img src="/static/interventional icon 2.png" style="box-shadow: none; max-height:80px; width:auto; height:auto" />
           Interventional
         </p>
         <p>
