--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </a>
         </p>
         <p>
-        <a href="/static/Lung-RADS.jpg">
+        <a href="/static/Lung-RADS 2.pdf">
           LUNG-RADS screening guidelines
         </a>
         </p>
