--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
           </a>
         </p>
         <p>
+          <a href="/static/InjuryScoringTables.pdf" />AAST Complete Trauma grading tables pdf</a>
+        </p>
+        <p>
           <a href="static/TIPS ultrasound.jpg" />
             TIPS Ultrasound
           </a>
