--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </a>
         </p>
         <p>
-        <a href="/static/contrast reaction protocol.jpg">
+        <a href="/static/contrast reaction protocol revised.pdf">
           Summa Contrast reaction protocol
         </a>
         </p>
