--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </a>
         </p>
         <p>
-          <a href="/static/AJR guidelines for anticoagulation drugs.jpg" />AJR Guidelines Anticoagulation drugs for IR procedures</a>
+          <a href="/static/AJR anticoagulation guidelines revised.pdf" />AJR Guidelines Anticoagulation drugs for IR procedures</a>
           <a href="/static/managment of anti-platlet agents before IR procedure - AJR.pdf" />[complete pdf here]</a>
         </p>
         <p>
