--- a/Flap CTA.html
+++ b/Flap CTA.html
@@ -1,3 +1,4 @@
+<body bgcolor="#000000" text="#d3d3d3" link="#add8e6" vlink="#add8e6" alink="#add8e6">
 <h1>Abdominal Wall CTA (DIEP) 1-15-2018</h1>
 <p>
 We have been getting several referrals for CTA of the adominal wall for rectus adominus flaps for breast reconstruction to evaluate the number and location of deep inferior epigastric artery perforators (CTA DIEP).  Main surgeon is Dr. Cody, whom I spoke with.  We will add a new protocol to the manual after the next committee meeting on Feb 2.  When reading these cases use Terarecon to create some MIP (thickness of at least 20mm) and/or Volume rendered images of the abdominal wall vessels.  I will try to get the techs to create the majority of the MIPS in the future.  
@@ -17,3 +18,4 @@ References:
 
 <p>https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3611736/
 </p>
+</body>
