--- a/Flap CTA.html
+++ b/Flap CTA.html
@@ -1,3 +1,13 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="/static/styles.css" />
+    <title>Rad Guidelines</title>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
+    <script type="text/javascript" src="/static/main.js?1"></script>
+  </head>
 <body bgcolor="#000000" text="#d3d3d3" link="#add8e6" vlink="#add8e6" alink="#add8e6">
 <h1>Abdominal Wall CTA (DIEP) 1-15-2018</h1>
 <p>
@@ -19,3 +29,4 @@ References:
 <p>https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3611736/
 </p>
 </body>
+</html>
