--- a/Flap CTA.html
+++ b/Flap CTA.html
@@ -22,11 +22,14 @@ See attached references.  Also see images from example case:  Acc # 17345000589
 <p>
 References:
 </p>
-<p>http://pubs.rsna.org/doi/pdf/10.1148/radiol.2483072054</p>
-
-<p>http://pubs.rsna.org/doi/abs/10.1148/rg.315105089</p>
-
-<p>https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3611736/
+<p>
+  <a href="static/Abdominal Wall CT Angiography.pdf" />Radiology - Abdominal Wall CT Angiography</a>
+</p>
+<p>
+  <a href="static/CT Angiography for Free Flap Breast Reconstruction.pdf" />Radiographics - CT Angiography for Free Flap Breast Reconstruction</a>
+</p>
+<p>
+  <a href="static/Pre-operative CT Angiography for Breast Reconstruction.pdf" />BJR - Pre-operative CT Angiography for Breast Reconstruction</a>
 </p>
 </body>
 </html>
