--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </a>
         </p>
         <p>
-        <a href="/static/2017 Fleishner guidelines.jpg">
+        <a href="/static/2017 Fleishner guidelines reversed.jpg">
           2017 Fleishner guidelines for incidentally discovered pulmonary nodules
         </a>
         </p>
