--- a/index.html
+++ b/index.html
@@ -68,11 +68,8 @@
           <a href="/static/ACR Incidental Pancreatic cysts.pdf" />[complete pdf here]</a>
         </p>
         <p>
-          <a href="/static/ACR Incidental Cystic Renal Mass.jpg" />ACR Incidental Cystic Renal Mass</a>
+          <a href="/static/Incidental Renal Mass on CT.pdf" />ACR 2018 Guidelines Incidental Renal Mass on CT</a>
           <a href="/static/ACR Incidental Renal Mass on CT.pdf" />[complete pdf here]</a>
-        </p>
-        <p>
-          <a href="/static/ACR Incidental Solid Renal Mass.jpg" />ACR Incidental Solid Renal Mass</a>
         </p>
         <p>
           <a href="/static/ACR incidental Adrenal mass.jpg" />ACR Incidental Adrenal Mass</a>
@@ -90,11 +87,11 @@
         </p>
         <p>
         <a href="/static/SIR Anticoagulation guidelines.jpg">
-          SIR anticoagulation guidelines for interventional procedures
+          2013 SIR anticoagulation guidelines for interventional procedures
         </a>
         </p>
         <p>
-          <a href="/static/AJR anticoagulation guidelines revised.pdf" />AJR Guidelines Anticoagulation drugs for IR procedures</a>
+          <a href="/static/AJR anticoagulation guidelines revised.pdf" />2015 AJR Guidelines Anticoagulation drugs for IR procedures</a>
           <a href="/static/managment of anti-platlet agents before IR procedure - AJR.pdf" />[complete pdf here]</a>
         </p>
         <p>
