--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
       </div>
       <div class="column right">
         <h1>Helpful Links:</h1>
+          <p text="#ffff99" link="#ffff99" vlink="#ffff99" alink="#ffff99">
+            <a href="/static/PIT phone numbers.png" />Phone number on the wall in the Core</a>
+          </p>
           <p>
             <a href="https://careone.westernreservehospital.org/vpn/index.html" />
               CareOne signoff for orders at WRH
