--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           Diagnostic
           </p>
         <p>
-        <a href="/static/TIRADS chart invert.jpg">
+        <a href="/static/TIRADS chart.png">
           TI-RADS Thyroid nodule classification and recommendations
         </a>
         <a href="/static/TI-RADS ACR paper.pdf" />
