--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </p>
         <p>
         <a href="/static/Contrast Reaction - ACR.pdf">
-          CONTRAST REACTION Protocol
+          ACR CONTRAST REACTION Protocol
         </a>
         </p>
         <p>
@@ -121,6 +121,9 @@
           <a href="static/TIPS ultrasound.jpg" />
             TIPS Ultrasound
           </a>
+        </p>
+        <p>
+          <a href="static/TIMI grading.jpg" />Stroke Recanalization grading system (TIMI/TICI)</a>
         </p>
         <p>
           <a href="static/arthrogram approaches.pdf" />Neil's paper on arthrogram technique</a>
