--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
           </a>
         </p>
         <p>
-          <a href="static/TIMI grading.jpg" />Stroke Recanalization grading system (TIMI/TICI)</a>
-        </p>
-        <p>
-          <a href="static/arthrogram approaches.pdf" />Neil's paper on arthrogram technique</a>
+          <a href="static/Stroke recanalization grading system.jpg" />Stroke Recanalization grading system (TIMI/TICI)</a>
         </p>
         <p>
           <a href="stroke.html" />Stroke Reference Papers</a>
+        </p>
+        <p>
+          <a href="static/arthrogram approaches.pdf" />Neil's paper on arthrogram technique</a>
         </p>
       </div>
       <div class="column right">
