--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           TI-RADS Thyroid nodule classification and recommendations
         </a>
         <a href="/static/TI-RADS ACR paper.pdf" />
-          [complete pdf here]
+          <sub>[complete pdf here]</sub>
         </a>
         </p>
         <p>
