--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </p>
         <p>
         <a href="/static/contrast hydration guidelines new.jpg">
-          Summa Contrast Hydration Protocols
+          Summa Contrast Hydration Protocols!
         </a>
         </p>
         <p>
