--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </p>
         <p>
         <a href="/static/contrast hydration guidelines new.jpg">
-          Summa Contrast Hydration Protocols!
+          Summa Contrast Hydration Protocols
         </a>
         </p>
         <p>
@@ -50,7 +50,7 @@
            ASPECT stroke scoring
         </a>
         <a href="static/ASPECT scoring AJNR.pdf" />
-          [complete pdf here]
+          <sub>[complete pdf here]</sub>
         </a>
         </p>
         <p>
@@ -65,19 +65,19 @@
         </p>
         <p>
           <a href="/static/Incidental pancreatic cystic mass.jpg" />ACR Incidental Pancreatic Cystic Mass</a>
-          <a href="/static/ACR Incidental Pancreatic cysts.pdf" />[complete pdf here]</a>
+          <a href="/static/ACR Incidental Pancreatic cysts.pdf" /><sub>[complete pdf here]</sub></a>
         </p>
         <p>
           <a href="/static/Incidental Renal Mass on CT.pdf" />ACR 2018 Guidelines Incidental Renal Mass on CT</a>
-          <a href="/static/ACR Incidental Renal Mass on CT.pdf" />[complete pdf here]</a>
+          <a href="/static/ACR Incidental Renal Mass on CT.pdf" /><sub>[complete pdf here]</sub></a>
         </p>
         <p>
           <a href="/static/ACR incidental Adrenal mass.jpg" />ACR Incidental Adrenal Mass</a>
-          <a href="/static/ACR Incidental Adrenal Mass.pdf" />[complete pdf here]</a>
+          <a href="/static/ACR Incidental Adrenal Mass.pdf" /><sub>[complete pdf here]</sub></a>
         </p>
         <p>
           <a href="/static/Incidental Adnexal Cystic Mass.jpg" />ACR Incidental Adnexal Cystic Mass</a>
-          <a href="/static/ACR Incidental Adnexal Cystic Mass.pdf" />[complete pdf here]</a>
+          <a href="/static/ACR Incidental Adnexal Cystic Mass.pdf" /><sub>[complete pdf here]</sub></a>
         </p>
       </div>
       <div class="column center">
@@ -92,7 +92,7 @@
         </p>
         <p>
           <a href="/static/AJR anticoagulation guidelines revised.pdf" />2015 AJR Guidelines Anticoagulation drugs for IR procedures</a>
-          <a href="/static/managment of anti-platlet agents before IR procedure - AJR.pdf" />[complete pdf here]</a>
+          <a href="/static/managment of anti-platlet agents before IR procedure - AJR.pdf" /><sub>[complete pdf here]</sub></a>
         </p>
         <p>
         <a href="static/SIR antibiotic guidelines.jpg">
