--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           Summa Contrast Hydration Protocols
         </a>
         </p>
-        <p>
+        <p text="#ff0000" link="ff0000" vlink=#ff0000" alink="#ff0000">
         <a href="/static/Contrast Reaction - ACR.pdf">
           ACR CONTRAST REACTION Protocol
         </a>
