--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </p>
         <p text="#ff0000" link="ff0000" vlink=#ff0000" alink="#ff0000">
         <a href="/static/Contrast Reaction - ACR.pdf">
-          ACR CONTRAST REACTION Protocol
+          ACR CONTRAST REACTION Protocol!
         </a>
         </p>
         <p>
