--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
           Summa Contrast Hydration Protocols
         </a>
         </p>
-        <p text="#ff0000" link="ff0000" vlink=#ff0000" alink="#ff0000">
+        <p style="color:red;">
         <a href="/static/Contrast Reaction - ACR.pdf">
-          ACR CONTRAST REACTION Protocol!
+          ACR CONTRAST REACTION Protocol
         </a>
         </p>
         <p>
