--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
           Summa Contrast Hydration Protocols
         </a>
         </p>
-        <p style="color:red;">
-        <a href="/static/Contrast Reaction - ACR.pdf">
-          ACR CONTRAST REACTION Protocol
+        <p>
+        <a href="/static/Contrast Reaction - ACR.pdf" style="color:red;">
+          ACR CONTRAST REACTION Protocol!
         </a>
         </p>
         <p>
