--- a/articles.html
+++ b/articles.html
@@ -9,4 +9,8 @@
     <script type="text/javascript" src="/static/main.js?1"></script>
   </head>
   <body bgcolor="#000000" text="#d3d3d3" link="#add8e6" vlink="#add8e6" alink="#add8e6">
-  
+  <p>
+    <a href=static/articles/Abscess drainage.pdf />Abscess drainage</a>
+  </p>
+</body>
+</html>
