--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
           <p>
             <a href="static/Protocols Ultrasound ARI 2018.pdf" />Ultrasound Protocols</a>
           </p>
+          <p>
+            <a href="articles.html" />Reference Articles</a>
+          </p>
         <h1>Updates and notifications</h1>
           <p>
             <a href="Flap CTA.html" />
