--- a/articles.html
+++ b/articles.html
@@ -10,7 +10,7 @@
   </head>
   <body bgcolor="#000000" text="#d3d3d3" link="#add8e6" vlink="#add8e6" alink="#add8e6">
   <p>
-    <a href=static/articles/Abscess drainage.pdf />Abscess drainage</a>
+    <a href="static/articles/Abscess drainage.pdf" />Abscess drainage</a>
   </p>
 </body>
 </html>
