--- a/articles.html
+++ b/articles.html
@@ -12,5 +12,8 @@
   <p>
     <a href="static/articles/Abscess drainage.pdf" />Abscess drainage</a>
   </p>
+  <p>
+    <a href="/static/articles/Acute Upper GI bleeding.pdf" />Acute Upper GI bleeding</a>
+  </p>
 </body>
 </html>
