--- a/articles.html
+++ b/articles.html
@@ -13,7 +13,10 @@
     <a href="static/articles/Abscess drainage.pdf" />Abscess drainage</a>
   </p>
   <p>
-    <a href="/static/articles/Acute Upper GI bleeding.pdf" />Acute Upper GI bleeding</a>
+    <a href="static/articles/Acute Upper GI bleeding.pdf" />Acute Upper GI bleeding</a>
+  </p>
+  <p>
+    <a href="static/articles/Central Line infections.pdf" />Central Line Infections</a>
   </p>
 </body>
 </html>
