--- a/articles.html
+++ b/articles.html
@@ -13,10 +13,28 @@
     <a href="static/articles/Abscess drainage.pdf" />Abscess drainage</a>
   </p>
   <p>
-    <a href="static/articles/Acute Upper GI bleeding.pdf" />Acute Upper GI bleeding</a>
+    <a href="static/articles/Acute Lower GI bleeding.pdf" />Acute Upper GI bleeding</a>
   </p>
   <p>
     <a href="static/articles/Central Line infections.pdf" />Central Line Infections</a>
+  </p>
+  <p>
+    <a href="static/articles/Early use of TIPS with variceal bleeding.pdf" />Early use of TIPS with variceal bleeding</a>
+  </p>
+  <p>
+    <a href="static/articles/Embolization of UGI bleeding.pdf" />Embolization of UGI bleeding</a>
+  </p>
+  <p>
+    <a href="static/articles/Percutaneous treatment of biliary stones.pdf" />Percutaneous treatment of biliary stones</a>
+  </p>
+  <p>
+    <a href="static/articles/Uterine Fibroid Embolization.pdf" />Uterine Fibroid Embolization</a>
+  </p>
+  <p>
+    <a href="static/articles/gastrotomy tube care.pdf" /Gatrostomy Tube Care</a>
+  </p>
+  <p>
+    <a href="static/articles/Primer for reading DEXAs.pdf" />Primer for reading DEXAs</a>
   </p>
 </body>
 </html>
