--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </p>
         <p>
         <a href="/static/Contrast Reaction - ACR.pdf" style="color:red;">
-          ACR CONTRAST REACTION Protocol!
+          ACR CONTRAST REACTION Protocol
         </a>
         </p>
         <p>
