--- a/stroke.html
+++ b/stroke.html
@@ -19,5 +19,11 @@
   <p>
     <a href="static/nejmoa1713973.pdf" />NEJM Thrombectomy for Stroke at 6 to 16 Hours with Selection by Perfusion Imaging</a>
   </p>
+  <p>
+    <a href="https://linkprotect.cudasvc.com/url?a=https://d27pqr4ityvq45.cloudfront.net/Penumbra/AUVxh8pG-7794A%2520ACE%2520Procedure%2520Video%2520-%2520Delivering%2520ACE%2520with%25203MAX.mp4%3fversionId%3dKDSG2oUmR4D_x84r4Zk02hNLskF59VLs&c=E,1,onQKtuDs6ONiNpXjjZwt_YCeu5tnCvIwmDDUL9LzpiITnFgRHaKcYny6UNzhaM8KnkW9HZFEndl1ffwfi6wjl_MeHXajtrYnQFmR_mQR6KcX1mM,&typo=1 />Penumbra ACE Instructional video part 1</a>
+  </p>
+  <p>
+    <a href="https://linkprotect.cudasvc.com/url?a=https://d27pqr4ityvq45.cloudfront.net/Penumbra/AUVxh-75-7795A%2520ACE%2520Procedure%2520Video%2520-%2520ACE%2520Clot%2520Extraction.mp4%3fversionId%3dfZu8YGcSHuvCPyy004mBMa1BdSDLSMJ2&c=E,1,4ILdwp5spsmXUfsPipmvmOsokz4DcMoxBnfMh17SwmQ7HxfqMTUZqcClb917TWLaYv2NK4avA53u2-etFRK2JVfSk1c0kwBv1tNPqaWKNthObk__mbnYuA,,&typo=1 </a>Penumbra ACE Instructional video part 2</a>
+  </p>
   </body>
 </html>
