--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <a href="/static/2017 Fleishner guidelines reversed.jpg">
           2017 Fleishner guidelines for incidentally discovered pulmonary nodules
         </a>
+        <a href="/static/2017 - Updated Fleischner Society Guidelines for Management of Pulmonary Nodules.pdf" />
+          <sub>[complete pdf here]</sub>
+        </a>
         </p>
         <p>
         <a href="/static/contrast hydration guidelines new.jpg">
