--- a/articles.html
+++ b/articles.html
@@ -10,35 +10,43 @@
   </head>
   <body bgcolor="#000000" text="#d3d3d3" link="#add8e6" vlink="#add8e6" alink="#add8e6">
   <h1>Reference Articles</h1>
-  <p>
-    <a href="static/articles/Abscess drainage.pdf" />Abscess drainage</a>
-  </p>
-  <p>
-    <a href="static/articles/Acute Lower GI bleeding.pdf" />Acute Upper GI bleeding</a>
-  </p>
-  <p>
-    <a href="static/articles/Central Line infections.pdf" />Central Line Infections</a>
-  </p>
-  <p>
-    <a href="static/articles/Early use of TIPS with variceal bleeding.pdf" />Early use of TIPS with variceal bleeding</a>
-  </p>
-  <p>
-    <a href="static/articles/Embolization of UGI bleeding.pdf" />Embolization of UGI bleeding</a>
-  </p>
-  <p>
-    <a href="static/articles/Percutaneous treatment of biliary stones - AJR.pdf" />Percutaneous treatment of biliary stones</a>
-  </p>
-  <p>
-    <a href="static/articles/Uterine Fibroid Embolization.pdf" />Uterine Fibroid Embolization</a>
-  </p>
-  <p>
-    <a href="static/articles/gastrotomy tube care.pdf" /Gatrostomy Tube Care</a>
-  </p>
-  <p>
-    <a href="static/articles/Primer for reading DEXAs.pdf" />Primer for reading DEXAs</a>
-  </p>
-  <p>
-    <a href="static/articles/ACR Contrast Manual.pdf" />ACR Contrast Manual</a>
-  </p>
+  <div id="container">
+    <div class="column left">
+      <h1>Diagnostic</h1>
+          <p>
+            <a href="static/articles/Primer for reading DEXAs.pdf" />Primer for reading DEXAs</a>
+          </p>
+          <p>
+            <a href="static/articles/ACR Contrast Manual.pdf" />ACR Contrast Manual</a>
+          </p>
+    </div>
+    <div class="column right">
+      <h1>Interventional</h1>
+        <p>
+          <a href="static/articles/Abscess drainage.pdf" />Abscess drainage</a>
+        </p>
+        <p>
+          <a href="static/articles/Acute Lower GI bleeding.pdf" />Acute Upper GI bleeding</a>
+        </p>
+        <p>
+          <a href="static/articles/Central Line infections.pdf" />Central Line Infections</a>
+        </p>
+        <p>
+          <a href="static/articles/Early use of TIPS with variceal bleeding.pdf" />Early use of TIPS with variceal bleeding</a>
+        </p>
+        <p>
+          <a href="static/articles/Embolization of UGI bleeding.pdf" />Embolization of UGI bleeding</a>
+        </p>
+        <p>
+          <a href="static/articles/Percutaneous treatment of biliary stones - AJR.pdf" />Percutaneous treatment of biliary stones</a>
+        </p>
+        <p>
+          <a href="static/articles/Uterine Fibroid Embolization.pdf" />Uterine Fibroid Embolization</a>
+        </p>
+        <p>
+          <a href="static/articles/gastrotomy tube care.pdf" /Gatrostomy Tube Care</a>
+        </p>
+    </div>
+  </div>
 </body>
 </html>
