--- a/articles.html
+++ b/articles.html
@@ -61,6 +61,12 @@
         <p>
           <a href="https://linkprotect.cudasvc.com/url?a=https://d27pqr4ityvq45.cloudfront.net/Penumbra/AUVxh-75-7795A%2520ACE%2520Procedure%2520Video%2520-%2520ACE%2520Clot%2520Extraction.mp4%3fversionId%3dfZu8YGcSHuvCPyy004mBMa1BdSDLSMJ2&c=E,1,4ILdwp5spsmXUfsPipmvmOsokz4DcMoxBnfMh17SwmQ7HxfqMTUZqcClb917TWLaYv2NK4avA53u2-etFRK2JVfSk1c0kwBv1tNPqaWKNthObk__mbnYuA,,&typo=1" </a>Penumbra ACE Instructional video part 2</a>
         </p>
+        <p>
+          <a href="static/articles/CT-MR Correlation.pdf" />ASA - Quantitative Assessment of Core/Penumbra Mismatch in Acute Stroke</a>
+        </p>
+        <p>
+          <a href="static/articles/CT vs MRI.pdf" />Modern imaging of the infarct core and the ischemic penumbra in acte stroke patients: CT vs MRI</a>
+        </p>
     </div>
   </div>
 </body>
