--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </a>
         </p>
         <p>
-        <a href="/static/Lung-RADS 2.pdf">
+        <a href="/static/Lung-RADS 2.jpg">
           LUNG-RADS screening guidelines
         </a>
         </p>
