--- a/articles.html
+++ b/articles.html
@@ -68,7 +68,7 @@
           <a href="static/articles/CT vs MRI.pdf" />Modern imaging of the infarct core and the ischemic penumbra in acte stroke patients: CT vs MRI</a>
         </p>
         <p>
-          <a href="static/articles/Basic Neuroangiography technique.pdf" />Basic Neuroangiography Techniques</a>
+          <a href="static/articles/Basic Neuroangiography techniques.pdf" />Basic Neuroangiography Techniques</a>
         </p>
     </div>
   </div>
