--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
         <p>
           <a href="static/Cervical Lymph Node Levels.jpg" />Cervical Lymph Node Levels</a>
         </p>
+        <p>
+          <a href="static/ILD chart.jpg" />ILD classification chart</a>
+        </p>
       </div>
       <div class="column center">
         <p style="font-size: 35px; margin: 0;">
