--- a/articles.html
+++ b/articles.html
@@ -19,6 +19,9 @@
           <p>
             <a href="static/articles/ACR Contrast Manual.pdf" />ACR Contrast Manual</a>
           </p>
+          <p>
+            <a href="static/articles/CT perfusion - AJNR.pdf" />Calculating CT Perfusion - AJNR</a>
+          </p>
     </div>
     <div class="column right">
       <h1>Interventional</h1>
