--- a/index.html
+++ b/index.html
@@ -137,6 +137,12 @@
         <p>
           <a href="static/arthrogram approaches.pdf" />Neil's paper on arthrogram technique</a>
         </p>
+        <p>
+          <a href="static/articles/AJNR - Evaluation of penumbra on CT perfusion.pdf" />AJNR Evaluation of penumbra on CT perfusion</a>
+        </p>
+        <p>
+          <a href="static/articles/uptodate_stroke.pdf" />UpToDate Mechanical thrombectomy for acute stroke</a>
+        </p>  
       </div>
       <div class="column right">
         <h1>Helpful Links:</h1>
