--- a/index.html
+++ b/index.html
@@ -142,7 +142,10 @@
         </p>
         <p>
           <a href="static/articles/uptodate_stroke.pdf" />UpToDate Mechanical thrombectomy for acute stroke</a>
-        </p>  
+        </p>
+        <p>
+          <a href="static/normal cranial angio dsa.jpg" />Cerebral artery anatomy on Angio</a>
+        </p>
       </div>
       <div class="column right">
         <h1>Helpful Links:</h1>
