--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         </p>
         <p>
           <a href="/static/RECIST.jpg" />RECIST guidelines for Oncology measurements</a>
+          <a href="/static/articles/RECIST.pdf" /><sub>[complete pdf here]</sub></a>
         </p>
       </div>
       <div class="column center">
