--- a/articles.html
+++ b/articles.html
@@ -22,6 +22,39 @@
           <p>
             <a href="static/articles/CT perfusion - AJNR.pdf" />Calculating CT Perfusion - AJNR</a>
           </p>
+          <p>
+            <a href="static/articles/Incidental Adrenal Masses.pdf" />ACR Incidental Adrenal Masses</a>
+          </p>
+          <p>
+            <a href="static/articles/Incidental Findings on Abdominal and Pelvic CT and MRI, Part 1_White Paper of the ACR Incidental Findings Committee II on Adnexal Findings.pdf" />ACR Incidental Adnexal Findings</a>
+          </p>
+          <p>
+            <a href="static/articles/Incidental Findings on Abdominal and Pelvic CT and MRI, Part 2_White Paper of the ACR Incidental Findings Committee II on Vascular Findings.pdf" />ACR Incidental Vascular Findings</a>
+          </p>
+          <p>
+            <a href="static/articles/Incidental Findings on Abdominal and Pelvic CT and MRI, Part 3_White Paper of the ACR Incidental Findings Committee II on Splenic and Nodal Findings.pdf" />ACR Incidental Splenic and Nodal Findings</a>
+          </p>
+          <p>
+            <a href="static/articles/Incidental Findings on Abdominal and Pelvic CT and MRI, Part 4_White Paper of the ACR Incidental Findings Committee II on Gallbladder and Biliary Findings.pdf" />ACR Incidental Gallbladder and Biliary Findings</a>
+          </p>
+          <p>
+            <a href="static/articles/Incidental Liver Lesions.pdf" />ACR Incidental Liver Lesions</a>
+          </p>
+          <p>
+            <a href="static/articles/Incidental Pituitary Findings.pdf" />ACR Incidental Pituitary Findings</a>
+          </p>
+          <p>
+            <a href="static/articles/Incidental Thyroid Nodules.pdf" />ACR Incidental Thyroid Nodules</a>
+          </p>
+          <p>
+            <a href="static/articles/Incidental Liver Lesions.pdf" />ACR Incidental Liver Lesions</a>
+          </p>
+          <p>
+            <a href="static/articles/NI-RADS.pdf" />Head and Neck Cancer (NI-RADS)</a>
+          </p>
+          <p>
+            <a href="static/articles/Incidental Thoracic CT_Mediastinal and Cardiovascular Findings.pdf" />ACR Incidental Mediastinal and Cardiovascular Findings</a>
+          </p>
     </div>
     <div class="column right">
       <h1>Interventional</h1>
