--- a/articles.html
+++ b/articles.html
@@ -53,7 +53,7 @@
             <a href="static/articles/NI-RADS.pdf" />Head and Neck Cancer (NI-RADS)</a>
           </p>
           <p>
-            <a href="static/articles/Incidental Thoracic CT_Mediastinal and Cardiovascular Findings.pdf" />ACR Incidental Mediastinal and Cardiovascular Findings</a>
+            <a href="static/articles/Incidental Thoracic CT Mediastinal and Cardiovascular Findings.pdf" />ACR Incidental Mediastinal and Cardiovascular Findings</a>
           </p>
     </div>
     <div class="column right">
