--- a/articles.html
+++ b/articles.html
@@ -26,16 +26,16 @@
             <a href="static/articles/Incidental Adrenal Masses.pdf" />ACR Incidental Adrenal Masses</a>
           </p>
           <p>
-            <a href="static/articles/Incidental Findings on Abdominal and Pelvic CT and MRI, Part 1_White Paper of the ACR Incidental Findings Committee || on Adnexal Findings.pdf" />ACR Incidental Adnexal Findings</a>
+            <a href="static/articles/Incidental Adnexal Findings.pdf" />ACR Incidental Adnexal Findings</a>
           </p>
           <p>
-            <a href="static/articles/Incidental Findings on Abdominal and Pelvic CT and MRI, Part 2_White Paper of the ACR Incidental Findings Committee || on Vascular Findings.pdf" />ACR Incidental Vascular Findings</a>
+            <a href="static/articles/Incidental Vascular Findings.pdf" />ACR Incidental Vascular Findings</a>
           </p>
           <p>
-            <a href="static/articles/Incidental Findings on Abdominal and Pelvic CT and MRI, Part 3_White Paper of the ACR Incidental Findings Committee II on Splenic and Nodal Findings.pdf" />ACR Incidental Splenic and Nodal Findings</a>
+            <a href="static/articles/Incidental Splenic and Nodal Findings.pdf" />ACR Incidental Splenic and Nodal Findings</a>
           </p>
           <p>
-            <a href="static/articles/Incidental Findings on Abdominal and Pelvic CT and MRI, Part 4_White Paper of the ACR Incidental Findings Committee II on Gallbladder and Biliary Findings.pdf" />ACR Incidental Gallbladder and Biliary Findings</a>
+            <a href="static/articles/Incidental Gallbladder and Biliary Findings.pdf" />ACR Incidental Gallbladder and Biliary Findings</a>
           </p>
           <p>
             <a href="static/articles/Incidental Liver Lesions.pdf" />ACR Incidental Liver Lesions</a>
