--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <a href="static/Protocols CT ARI 2018.pdf" />CT Protocols</a>
           </p>
           <p>
-            <a href="static/Protocols MRI ARI 2018.pdf" />MRI Protocols</a>
+            <a href="static/Protocols MRI ARI 2018c.pdf" />MRI Protocols (updated 9-2018)</a>
           </p>
           <p>
             <a href="static/Protocols Radiography ARI 2018.pdf" />Radiography Protcol</a>
