--- a/articles.html
+++ b/articles.html
@@ -55,6 +55,9 @@
           <p>
             <a href="static/articles/Incidental Thoracic CT Mediastinal and Cardiovascular Findings.pdf" />ACR Incidental Mediastinal and Cardiovascular Findings</a>
           </p>
+          <p>
+            <a href="static/articles/SRU Ovarian lesion.pdf" />SRU - Ovarian lesions on Ultrasound</a>
+          </p>
     </div>
     <div class="column right">
       <h1>Interventional</h1>
