--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
             <a href="static/Protocols MRI ARI 2018c.pdf" />MRI Protocols (updated 9-2018)</a>
           </p>
           <p>
+            <a href="static/Gadolinium Advisory Statement ARI 2018.pdf" />Gadolinium Advisory Statement</a>
+          <p>
             <a href="static/Protocols Radiography ARI 2018.pdf" />Radiography Protcol</a>
           </p>
           <p>
