--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
           <a href="/static/RECIST.jpg" />RECIST guidelines for Oncology measurements</a>
           <a href="/static/articles/RECIST.pdf" /><sub>[complete pdf here]</sub></a>
         </p>
+        <p>
+          <a href="/static/GGO Classification Table.pdf" />GGO Classification Table</a>
+        </p>
       </div>
       <div class="column center">
         <p style="font-size: 35px; margin: 0;">
