--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
           </a>
         </p>
         <p>
+          <a href="static/Stroke activation flowchart.jpg" />Stroke Activation Flowchart</a>
+        </p>
+        <p>
           <a href="static/Stroke recanalization grading system.jpg" />Stroke Recanalization grading system (TIMI/TICI)</a>
         </p>
         <p>
