--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           </a>
         </p>
         <p>
-          <a href="static/Stroke activation flowchart.jpg" />Stroke Activation Flowchart</a>
+          <a href="static/Stroke activation flowchart.jpg" style="color:yellow;">Stroke Activation Flowchart</a>
         </p>
         <p>
           <a href="static/Stroke recanalization grading system.jpg" />Stroke Recanalization grading system (TIMI/TICI)</a>
