--- a/articles.html
+++ b/articles.html
@@ -58,6 +58,12 @@
           <p>
             <a href="static/articles/SRU Ovarian lesion.pdf" />SRU - Ovarian lesions on Ultrasound</a>
           </p>
+          <p>
+            <a href="static/articles/Normal and Abnormal Sonographic Findings Post Thyroidectomy.pdf" />AJR - Normal and Abnormal Sonographic Findings Post Thyroidectomy</a>
+          </p>
+          <p>
+            <a href="static/articles/Why thyroid surgeons are frustrated with radiologists.pdf" />Radiographics - Why Thyroid Surgeons are Frustrated with Radiologists</a>
+          </p>
     </div>
     <div class="column right">
       <h1>Interventional</h1>
