--- a/articles.html
+++ b/articles.html
@@ -64,6 +64,12 @@
           <p>
             <a href="static/articles/Why thyroid surgeons are frustrated with radiologists.pdf" />Radiographics - Why Thyroid Surgeons are Frustrated with Radiologists</a>
           </p>
+          <p>
+            <a href="static/articles/Improved Accuracy with TI-RADS.pdf" />Radiology - Reduction in Thyroid Nodule Bx and Improved Accuracy with TI-RADS</a>
+          </p>
+          <p>
+            <a href="static/articles/TI-RADS comparison.pdf" />AJR - Comparison of Performance of TI-RADS and ATA Guidelines</a>
+          </p>
     </div>
     <div class="column right">
       <h1>Interventional</h1>
