--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <a href="static/Protocols Ultrasound ARI 2018.pdf" />Ultrasound Protocols</a>
           </p>
           <p>
-            <a href="articles.html" />Reference Articles</a>
+            <a href="articles.html" style="color:yellow;">Reference Articles</a>
           </p>
         <h1>Updates and notifications</h1>
           <p>
