--- a/index.html
+++ b/index.html
@@ -170,10 +170,19 @@
             your badge click on the "help me log in" link. After you answer your two authentication questions, you will be allowed to sign off 
           </p>
           <p>
-            <a href="static/Protocols CT ARI 2018.pdf" />CT Protocols</a>
+            <a href="static/Protocols CT ARI 2019c.pdf" />CT Protocols (updated 9-4-2019)</a>
           </p>
           <p>
-            <a href="static/Protocols MRI ARI 2018c.pdf" />MRI Protocols (updated 9-2018)</a>
+            <a href="static/Protocols MRI ARI 2019c.pdf" />MRI Protocols (updated 9-4-2019)</a>
+          </p>
+          <p>
+            <a href="static/Protocols - CT recommendations.pdf" />CT study recommendations (updated 9-4-2019)</a>
+          </p>
+          <p>
+            <a href="static/Protocols - MRI Recommendations.pdf" />MRI study recommendations (updated 9-4-2019)</a>
+          </p>
+          <p>
+            <a href="static/Hydration protocol - ARI.pdf" />Hydration protocol (updated 9-4-2019)</a>
           </p>
           <p>
             <a href="static/Gadolinium Advisory Statement ARI 2018.pdf" />Gadolinium Advisory Statement</a>
