--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </p>
         <p>
         <a href="/static/articles/Lung-RADS 1-1.pdf">2019 LUNG-RADS 1.1 screening guidelines</a>
-        <a href="/static/articles/Lung-RADS 1-1 updates.pdf" /><sub>2019 Lung-RADS 1.1 updates</sub></a>
+        <a href="/static/articles/Lung-RADS 1-1 updates.pdf" /><sub>[complete powerpoint]</sub></a>
         </p>
         <p>
         <a href="/static/non small cell lung cancer staging.jpg">
