--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <a href="/static/TIRADS chart.png">
           TI-RADS Thyroid nodule classification and recommendations
         </a>
-        <a href="/static/TI-RADS ACR paper.pdf" />
-          <sub>[complete pdf here]</sub>
+        <a href="https://www.acr.org/Clinical-Resources/Reporting-and-Data-Systems/TI-RADS" />
+          <sub>[ACR official page]</sub>
         </a>
         </p>
         <p>
