--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
           Interventional
         </p>
         <p>
-        <a href="/static/SIR Anticoagulation guidelines.jpg">
-          2013 SIR anticoagulation guidelines for interventional procedures
+        <a href="/static/ARI 2019 Anticoagulation guidelines.pdf">
+          2019 ARI anticoagulation guidelines for interventional procedures
         </a>
         </p>
         <p>
-          <a href="/static/AJR anticoagulation guidelines revised.pdf" />2015 AJR Guidelines Anticoagulation drugs for IR procedures</a>
+          <a href="/static/ARI 2019 Antiplatelet Guidelines.pdf" />2019 ARI Anticoagulation drugs for IR procedures</a>
           <a href="/static/managment of anti-platlet agents before IR procedure - AJR.pdf" /><sub>[complete pdf here]</sub></a>
         </p>
         <p>
