--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </p>
         <p>
           <a href="/static/ARI 2019 Antiplatelet Guidelines.pdf" />2019 ARI Anticoagulation drugs for IR procedures</a>
-          <a href="/static/SIR 2019 Anticoagulation Guidelines.pdf" /><sub>[complete pdf here]</sub></a>
+          <a href="/static/SIR 2019 Anticoagulation guidelines.pdf" /><sub>[complete pdf here]</sub></a>
         </p>
         <p>
         <a href="static/SIR antibiotic guidelines.jpg">
