--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body bgcolor="#000000" text="#d3d3d3" link="#add8e6" vlink="#add8e6" alink="#add8e6">
     <div id="heading">
       <img src="/static/ARI title logo.png" style="box-shadow: none; max-height:100px; width:auto;" align="left" />
-      <a href="/static/phone directory new.jpg">
+      <a href="/static/phone directory new.pdf">
         <img src="/static/directory icon complete.png" style="box-shadow: none; max-height:125px; width:auto;" align="right" />
       </a>
     </div>
