--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div id="container">
         <div class="column left">
           <p style="font-size:35px; margin: 0;">
-            <img src="/static/diagnostic icon 2.png" style="box-shadow: none; max-height:80px; width:auto; height:auto;" /> 
-          Diagnostic
+            <img src="/static/BPR icon.png" style="box-shadow: none; max-height:80px; width:auto; height:auto;" /> 
+          Best Practice Recs
           </p>
           
         <p>
@@ -49,13 +49,6 @@
         <p>
           <a href="/static/RECIST.jpg" />RECIST guidelines for Oncology measurements</a>
           <a href="/static/articles/RECIST.pdf" /><sub>[complete pdf here]</sub></a>
-        </p>
-
-        <p>
-        <a href="/static/contrast hydration guidelines new.jpg">
-          Summa Contrast Hydration Protocols
-        </a>
-        </p>
 
         <p>
         <a href="static/ASPECTS scoring.jpg">
@@ -64,6 +57,12 @@
         <a href="static/ASPECT scoring AJNR.pdf" />
           <sub>[complete pdf here]</sub>
         </a>
+        </p>
+
+        </p>
+          <p style="font-size:35px; margin: 0;">
+            <img src="/static/diagnostic icon 2.png" style="box-shadow: none; max-height:80px; width:auto; height:auto;" /> 
+          Diagnostic
         </p>
 
         <p>
@@ -100,7 +99,7 @@
       </div>
       <div class="column center">
         <p style="font-size: 35px; margin: 0;">
-          <img src="/static/interventional icon 2.png" style="box-shadow: none; max-height:80px; width:auto; height:auto" />
+          <img src="/static/interventional icon 3.png" style="box-shadow: none; max-height:80px; width:auto; height:auto" />
           Interventional
         </p>
         <p>
